--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,10 @@
 		<title>Astro</title>
 	</head>
 	<body>
+		<a href="/">Início</a>
+		<a href="/about/">Sobre</a>
+		<a href="/blog/">blog</a>
+		
 		<h1>Meu Site Astro</h1>
 	</body>
 </html>
