--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,22 +1,85 @@
-<body>
+---
+import { literal } from "astro/zod";
+
+const pageTitle = "Sobre Mim";
+
+const identify = {
+  firstName: "Thiago",
+  country: "Girassol",
+  occupation: "Programador",
+  hobbies: ["fotografia", "observar pássaros", "beisebol"],
+};
+
+const skills = [
+  "HTML",
+  "CSS",
+  "JavaScript",
+  "Vue.js",
+  "Astro",
+  "Escrever Documentação",
+];
+
+const happy = true;
+const finished = false;
+const goal = 3;
+---
+
+<html lang="pt-BR">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>{pageTitle}</title>
+  </head>
+  <body>
     <a href="/">Início</a>
     <a href="/about/">Sobre</a>
-    <a href="/blog/">blog</a>
-
-    <h1>Sobre Mim</h1>
-    <h2>... e meu novo site Astro!</h2>
-
-    <h1>Meu Site Astro</h1>
-    <h1>Sobre Mim</h1>
+    <a href="/blog/">Blog</a>
+    <h1>{pageTitle}</h1>
     <h2>... e meu novo site Astro!</h2>
 
     <p>
-        Estou resolvendo o tutorial introdutório do Astro. Esta é a segunda
-        página no meu website, e é a primeira que eu mesmo construí!
+      Estou resolvendo o tutorial introdutório do Astro. Esta é a segunda página
+      no meu website, e é a primeira que eu mesmo construí!
     </p>
 
     <p>
-        Este site será atualizado enquanto eu completo mais desse tutorial,
-        então continue verificando e veja como minha jornada está indo!
+      Este site será atualizado enquanto eu completo mais desse tutorial, então
+      continue verificando e veja como minha jornada está indo!
     </p>
-</body>
+
+    <p>Aqui esttão alguns fatos sobre mim:</p>
+    <ul>
+      <li>Meu nome é {identify.firstName}.</li>
+      <li>
+        Eu moro no {identify.country} e eu trabalho como um {
+          identify.occupation
+        }.
+      </li>
+      {
+        identify.hobbies.length >= 2 && (
+          <li>
+            Dois dos meus hobbies são: {identify.hobbies[0]} e{" "}
+            {identify.hobbies[1]}
+          </li>
+        )
+      }
+    </ul>
+
+    <p>Minhas habilidades são:</p>
+    <ul>
+      {skills.map((habilidade) => <li>{habilidade}</li>)}
+    </ul>
+
+    {happy && <p>Estou feliz em estar aprendendo Astro!</p>}
+
+    {finished && <p>Eu terminei esse tutorial!</p>}
+
+    {
+      goal === 3 ? (
+        <p>Minha meta é terminar em 3 dias.</p>
+      ) : (
+        <p>Minha meta não é em 3 dias.</p>
+      )
+    }
+  </body>
+</html>
