inserindo variaveis na bagina about

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,4 @@
 ---
-import { literal } from "astro/zod";
-
 const pageTitle = "Sobre Mim";
 
 const identify = {
@@ -22,6 +20,10 @@ const skills = [
 const happy = true;
 const finished = false;
 const goal = 3;
+
+const skillColor = "navy";
+const fontWeight = "bold";
+const textCase = "uppercase";
 ---
 
 <html lang="pt-BR">
@@ -29,6 +31,18 @@ const goal = 3;
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>{pageTitle}</title>
+    
+    <style define:vars={{skillColor, fontWeight, textCase}}>
+      h1 {
+        color: purple;
+        font-size: 4rem;
+      }
+      .skill {
+        color: var(--skillColor);
+        font-weight: var(--fontWeight);
+        text-transform: var(--textCase);
+      }
+    </style>
   </head>
   <body>
     <a href="/">Início</a>
@@ -68,6 +82,10 @@ const goal = 3;
     <p>Minhas habilidades são:</p>
     <ul>
       {skills.map((habilidade) => <li>{habilidade}</li>)}
+    </ul>
+
+    <ul>
+      {skills.map((skill) => <li class="skill">{skill}</li>)}
     </ul>
 
     {happy && <p>Estou feliz em estar aprendendo Astro!</p>}
