--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,8 @@
 ---
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
+import '../styles/global.css'
+
 const pageTitle = "Sobre Mim";
 
 const identify = {
@@ -45,9 +49,7 @@ const textCase = "uppercase";
     </style>
   </head>
   <body>
-    <a href="/">Início</a>
-    <a href="/about/">Sobre</a>
-    <a href="/blog/">Blog</a>
+    <Header/>
     <h1>{pageTitle}</h1>
     <h2>... e meu novo site Astro!</h2>
 
@@ -99,5 +101,9 @@ const textCase = "uppercase";
         <p>Minha meta não é em 3 dias.</p>
       )
     }
+    <Footer />
+    <script>
+      import "../scripts/menu.js";
+    </script>
   </body>
 </html>
