--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,8 @@
 ---
+import Header from "../components/Header.astro"
+import Footer from "../components/Footer.astro"
+import '../styles/global.css'
+
 const pageTitle ="blog"
 ---
 <html lang="pt-BR">
@@ -8,9 +12,7 @@ const pageTitle ="blog"
     <title>{pageTitle}</title>
   </head>
   <body>
-    <a href="/">Início</a>
-    <a href="/about/">Sobre</a>
-    <a href="/blog/">Blog</a>
+    <Header />
 
     <h1>Meu Blog de Aprendizado sobre Astro</h1>
     <p>Aqui é onde postarei sobre minha jornada aprendendo Astro.</p>
@@ -19,5 +21,9 @@ const pageTitle ="blog"
       <li><a href="/posts/post-2/">Postagem 2</a></li>
       <li><a href="/posts/post-3/">Postagem 3</a></li>
     </ul>
+    <Footer />
+    <script>
+      import "../scripts/menu.js";
+    </script>
   </body>
 </html>
