--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,8 @@
 ---
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import '../styles/global.css'
+
 const pageTitle ="Página Inicial"
 ---
 
@@ -11,10 +15,11 @@ const pageTitle ="Página Inicial"
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<a href="/">Início</a>
-		<a href="/about/">Sobre</a>
-		<a href="/blog/">blog</a>
-		
+		<Header/>
 		<h1>Meu Site Astro</h1>
+		<Footer />
+		<script>
+			import "../scripts/menu.js";
+		</script>
 	</body>
 </html>
