--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,6 @@
 ---
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
 import '../styles/global.css'
+import BaseLayout from '../layouts/BaseLayout.astro';
 
 const pageTitle = "Sobre Mim";
 
@@ -29,11 +28,7 @@ const skillColor = "navy";
 const fontWeight = "bold";
 const textCase = "uppercase";
 ---
-
-<html lang="pt-BR">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+<BaseLayout pageTitle={pageTitle}>
     <title>{pageTitle}</title>
     
     <style define:vars={{skillColor, fontWeight, textCase}}>
@@ -47,9 +42,7 @@ const textCase = "uppercase";
         text-transform: var(--textCase);
       }
     </style>
-  </head>
-  <body>
-    <Header/>
+
     <h1>{pageTitle}</h1>
     <h2>... e meu novo site Astro!</h2>
 
@@ -101,9 +94,4 @@ const textCase = "uppercase";
         <p>Minha meta não é em 3 dias.</p>
       )
     }
-    <Footer />
-    <script>
-      import "../scripts/menu.js";
-    </script>
-  </body>
-</html>
+</BaseLayout>
