--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,19 +1,10 @@
 ---
-import Header from "../components/Header.astro"
-import Footer from "../components/Footer.astro"
 import '../styles/global.css'
-
+import BaseLayout from '../layouts/BaseLayout.astro'
 const pageTitle ="blog"
 ---
-<html lang="pt-BR">
-  <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width" />
-    <title>{pageTitle}</title>
-  </head>
-  <body>
-    <Header />
 
+<BaseLayout pageTitle={pageTitle}>
     <h1>Meu Blog de Aprendizado sobre Astro</h1>
     <p>Aqui é onde postarei sobre minha jornada aprendendo Astro.</p>
     <ul>
@@ -21,9 +12,4 @@ const pageTitle ="blog"
       <li><a href="/posts/post-2/">Postagem 2</a></li>
       <li><a href="/posts/post-3/">Postagem 3</a></li>
     </ul>
-    <Footer />
-    <script>
-      import "../scripts/menu.js";
-    </script>
-  </body>
-</html>
+</BaseLayout>
