--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,15 +1,15 @@
 ---
 import '../styles/global.css'
 import BaseLayout from '../layouts/BaseLayout.astro'
-const pageTitle ="blog"
+import BlogPost from '../components/BlogPost.astro';
+const allPosts = await Astro.glob('../pages/posts/*.md');
+const pageTitle ="Meu Blog de Aprendizado sobre Astro"
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-    <h1>Meu Blog de Aprendizado sobre Astro</h1>
     <p>Aqui é onde postarei sobre minha jornada aprendendo Astro.</p>
     <ul>
-      <li><a href="/posts/post-1/">Postagem 1</a></li>
-      <li><a href="/posts/post-2/">Postagem 2</a></li>
-      <li><a href="/posts/post-3/">Postagem 3</a></li>
+      {allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
     </ul>
 </BaseLayout>
+
