construindo página de índice de tags

--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -25,3 +25,5 @@ const { posts } = Astro.props;
         {posts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title}/>)}
       </ul>
 </BaseLayout>
+
+https://docs.astro.build/pt-br/tutorial/5-astro-api/3/ onde parei
